--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,10 +40,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Install golangci-lint
+      run: |
+        curl -sSf https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh
+
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v6
       with:
-        version: v1.46.2
+        version: v1.56.2
   
   push:
     runs-on: ubuntu-latest
