--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,10 +22,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Go 1.22
+    - name: Set up Go 1.21.10
       uses: actions/setup-go@v2
       with:
-        go-version: 1.22
+        go-version: 1.21.10
 
     - name: Build
       run: go build -o go-web-app
@@ -40,9 +40,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Install golangci-lint
-      run: |
-        curl -sSf https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh
+    # - name: Install golangci-lint
+    #   run: |
+    #     curl -sSf https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh
 
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v6
