update golang version2

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,9 +40,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # - name: Install golangci-lint
-    #   run: |
-    #     curl -sSf https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh
+    - name: Cache Go modules
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/go-build
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ env.GO_VERSION }}
+        restore-keys: |
+          ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
 
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v6
